<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">魔键</string>
    <string name="version_code">v1.0.1</string>

    <!-- default function -->
    <string name="capture">抓拍</string>
    <string name="sound_recording">录音</string>
    <string name="open_camera">智能相机</string>
    <string name="open_flash_light">手电筒</string>
    <string name="qrcode">扫一扫</string>
    <string name="screenshot">截屏</string>
    <string name="recently_opened">最近打开</string>
    <string name="clear_memory">清理内存</string>
    <string name="add_function">添加功能</string>

    <!-- 系统功能 -->
    <string name="mobile_net">移动数据</string>
    <string name="hot_spot">wifi热点</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">蓝牙</string>
    <string name="data_synchronization">数据同步</string>
    <string name="fly_mode">飞行模式</string>
    <string name="nfc">NFC</string>
    <string name="brightness">亮度</string>
    <string name="auto_rotation">屏幕自动旋转</string>
    <string name="full_screen_mode">全屏模式</string>
    <string name="flash_light">闪光灯</string>
    <string name="gps">GPS</string>
    <string name="mute">静音</string>
    <string name="vibration_ringing">响铃振动</string>
    <string name="haptic_feedback">触摸振动</string>

    <!-- 高级功能 -->
    <string name="call_phone">直接拨打电话</string>
    <string name="sms">直接发短信</string>

    <!-- title -->
    <string name="title_add_mj">选择功能</string>
    <string name="title_common_problem">常见问题</string>
    <string name="title_feed_back">意见反馈</string>
    <string name="title_invalid_app">已安装应用</string>
    
    <!-- update dialog -->
    <string name="update_dialog_message">发现新版本，是否现在更新?</string>
    <string name="update_dialog_ok">现在更新</string>
    <string name="update_dialog_cancel">以后再说</string>
    
    <!-- float prompt dialog -->
    <string name="float_dialog_message">为保证魔键功能正常使用，请在魔键应用详情页执行以下操作：\n打开显示悬浮窗</string>
    <string name="float_dialog_ok">设置</string>
    <string name="float_dialog_cancel">取消</string>

    <!-- 设置 -->
    <string name="toggle_key_vibration">按键震动开关</string>
    <string name="description_key_vibration">按下魔键会有震动反馈,关闭震动关闭</string>
    <string name="toggle_turnover_invalid">翻转无效开关</string>
    <string name="description_turnover_invalid">当横转或者倒转手机时,自动关闭魔键功能</string>
    <string name="title_application_invalid">指定应用无效</string>
    <string name="description_application_invalid">指定应用不响应魔键操作</string>
    <string name="toggle_notification">通知栏开关</string>
    <string name="description_notification">通知栏默认会有快捷键开关,关闭后消失</string>
    <string name="title_function_check">功能校验</string>
    <string name="description_function_check">用于激活或校验魔键的功能</string>
    <string name="description_common_problem">魔键的使用教程及常见问题解答</string>
    <string name="title_check_update">检查更新</string>
    <string name="description_check_update">发现新版本</string>
    <string name="send">发送</string>
    <string name="contact_hint">联系方式(手机,QQ,邮箱)</string>
    <string name="info_hint">请输入您的反馈意见,我们会尽快对您的意见做出优化,谢谢您对魔键的支持。</string>
    <string name="invalid_app_second_title">可以响应魔键的应用</string>

    <!-- 四个魔键 -->
    <string name="mj_1">0</string>
    <string name="mj_2">1</string>
    <string name="mj_3">2</string>
    <string name="mj_4">3</string>

    <!-- fali prompt -->
    <string name="no_flash_light">无法打开闪光灯</string>
    <string name="no_network">网络连接不可用，请稍后重试</string>
    <string name="no_operation">默认功能不能移除与替换</string>
    <string name="no_sdcard">SD卡无法访问</string>
    <string name="no_camera">无法连接到照相机</string>
    <string name="no_launch_recent_task">无法启动最近任务</string>
    <string name="no_open_app">打开应用失败</string>
    <string name="no_mobile_net">设置移动网络失败</string>
    <string name="no_bluetooth">不支持蓝牙</string>
    <string name="no_wifi_ap">无法打开wifi热点</string>
    <string name="no_nfc">不支持NFC</string>
    <string name="no_recent_app">无法打开最近任务列表</string>
    <string name="no_root">该功能需要root后才能使用</string>
    <string name="no_phone_number">无法获得该联系人电话号码</string>
    <string name="no_app_icon">无法获取应用图标</string>
    <string name="no_add_more_mj">添加功能已达上线</string>
    <string name="app_unknownError">遇到未知异常退出</string>

    <!-- success prompt -->
    <string name="take_photo_success">拍照成功,相片保存在%s</string>
    <string name="clear_memeory_success">所有进程已关闭，清理内存空间%sM</string>
    <string name="screen_shot_success">截屏成功,图片保存在%s</string>

    <!-- 二维码 -->
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>

    <!-- 添加功能 -->
    <string name="application">应用</string>
    <string name="system">系统</string>
    <string name="advanced">高级</string>
    <string name="action_settings">Settings</string>
    <string name="title">膜键</string>
    <string name="function3">Wi-Fi</string>
    <string name="function8">删除列表</string>
    <string name="app_download">应用推荐</string>
    <string name="setting">设置</string>
    <string name="multikey">组合键</string>
    <string name="message_center">消息中心</string>
    <string name="about">关于</string>
    <string name="check_update">检查更新</string>
    <string name="feedback">用户反馈</string>
    <string name="selection">精选</string>
    <string name="appmust">必备</string>
    <string name="rankinglist">排行榜</string>
    <string name="switching">切换</string>
    <string name="remove">移除</string>

</resources>