<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="243dp"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <FrameLayout 
        android:id="@+id/fLayoutMenuMultikey"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multikey" 
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    </FrameLayout>
	<ImageView 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/fenggexian_heng"/>
    <FrameLayout 
        android:id="@+id/fLayoutMenuMessageCenter"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_center"
        android:textColor="#ff000000" 
        android:textSize="20sp"
        android:layout_gravity="center"/>
    </FrameLayout>
    
    <ImageView 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/fenggexian_heng"/>
    
    <FrameLayout 
        android:id="@+id/fLayoutAppDownload"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_download" 
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    </FrameLayout>
    
    <ImageView 
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/fenggexian_heng"/>
    
    <FrameLayout 
        android:id="@+id/fLayoutSetting"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting" 
        android:textColor="#ff000000"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    </FrameLayout>
</LinearLayout>
