<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <com.hrj.mojian.view.AlphaLinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/top_bar_back_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/title_add_mj"
                android:textColor="#fbfbfb"
                android:textSize="16dp" />
        </com.hrj.mojian.view.AlphaLinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <ImageView
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/version_code"
                android:textColor="@android:color/black"
                android:textSize="13dp" />

            <View
                style="@style/divider_style"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:id="@+id/key_vibration_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_item_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/title_key_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_key_vibration"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_key_vibration"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_key_vibration"
                    android:textColor="@android:color/black"
                    android:textSize="12dp" />

                <ToggleButton
                    android:id="@+id/key_vibration_toggle"
                    style="@style/toggle_button"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="" />
            </RelativeLayout>

            <View style="@style/divider_style" />

            <RelativeLayout
                android:id="@+id/turnover_invalid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_item_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/title_turnover_invalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_turnover_invalid"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_turnover_invalid"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_turnover_invalid"
                    android:textColor="@android:color/black"
                    android:textSize="12dp" />

                <ToggleButton
                    android:id="@+id/turnover_invalid_toggle"
                    style="@style/toggle_button"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="" />
            </RelativeLayout>

            <View style="@style/divider_style" />

            <RelativeLayout
                android:id="@+id/application_invalid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_item_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/title_application_invalid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_application_invalid"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_application_invalid"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_application_invalid"
                    android:textColor="@android:color/black"
                    android:textSize="12dp" />
            </RelativeLayout>

            <View style="@style/divider_style" />

            <RelativeLayout
                android:id="@+id/notification_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_item_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/title_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_notification"
                    android:textColor="@android:color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_notification"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_notification"
                    android:textColor="@android:color/black"
                    android:textSize="12dp" />

                <ToggleButton
                    android:id="@+id/notification_toggle"
                    style="@style/toggle_button"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>