<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar_bg"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <com.hrj.mojian.view.AlphaLinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top_bar_back_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/title_feed_back"
                android:textColor="#fbfbfb"
                android:textSize="16dp" />
        </com.hrj.mojian.view.AlphaLinearLayout>

        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/send"
            android:textColor="#fbfbfb"
            android:textSize="16dp" />

        <ImageView
            style="@style/image_default"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@id/send"
            android:src="@drawable/title_dividing_line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/info_edit_view"
        android:layout_width="268dp"
        android:layout_height="164dp"
        android:layout_below="@id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <EditText
            android:id="@+id/info_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shurukuang_lianxifangshi"
            android:gravity="left|top"
            android:hint="@string/info_hint"
            android:maxLength="200"
            android:padding="12dp"
            android:textColor="#999999"
            android:textColorHint="#999999"
            android:textSize="15dp" />

        <Button
            android:id="@+id/limit"
            android:layout_width="30dp"
            android:layout_height="18dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_zishuxianzhi"
            android:gravity="center"
            android:text="200"
            android:textColor="#ffffff"
            android:textSize="10dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/contact_edit"
        android:layout_width="268dp"
        android:layout_height="36dp"
        android:layout_below="@id/info_edit_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/shurukuang_lianxifangshi"
        android:gravity="left|center_vertical"
        android:hint="@string/contact_hint"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:textColor="#999999"
        android:textColorHint="#999999"
        android:textSize="15dp" />

</RelativeLayout>